2001-12-14  Johan Dahlin  <jdahlin@telia.com>

	* configure.in (PYGTK_MINOR_VERSION): Add and define
	PYGTK_[MAJOR,MINOR,MACRO]_VERSION. Also add *_REQUIRED_VERSION 
	for dependencies.

	* gtk/gtkmodule.c (init_gtk): remove gtk_major_version,
	gtk_minor_version and gtk_macro_version and replace them with
	gtk_version,
	Add pygtk_version.

2001-12-14  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (override_signal): another helper function for
	overriding existing signals.  Haven't done chaining support yet.
	(add_signals): if value in __gsignals__ dict is None or
	'override', then call override_signal instead.

	* examples/gobject/signal.py: use __gsignals__ notation here.

	* gobjectmodule.c (create_signal, add_signals): helper routines
	for handling __gsignals__ attribute of classes.
	(pyg_type_register): add support for creating signals as part of
	type registration.

2001-12-14  Johan Dahlin  <jdahlin@telia.com>

	* gtk/gtk.override (_wrap_gtk_window_get_position): 
	(_wrap_gtk_window_get_size): 
	(_wrap_gtk_window_get_default_size): Impl.

	* gtk/gtk-types.defs (FileSelection): Added fields.

	* gtk/gtk.defs (gtk_pixmap_new): Fix deprecation warning. GtkPixbuf->GdkPixbuf
	* gtk/gtk.defs (set_usize): dito, set_default_size -> set_size_request

2001-12-12  Matt Wilson  <msw@redhat.com>

	* gobjectmodule.c (pyg_closure_marshal,
	pyg_signal_class_closure_marshal): always print and clear the
	exceptions in callback marshalers.  People who want to catch these
	exceptions and make them fatal should use sys.excepthook.
	(pyg_fatal_exceptions_notify, pyg_fatal_exceptions_notify_add,
	pyg_fatal_exceptions_remove): remove now unused functions.  Also
	remove them from the PyGObject_API.
	
	* gtk/pygtk.h (PyGtk_FatalExceptions): remove.

	* gtk/pygtk-private.h (PyGtk_FatalExceptions): remove.

	* gtk/gtkmodule.c (init_gtk): don't bother with
	PYGTK_FATAL_EXCEPTIONS.
	(pygtk_main_quit): remove unused code.

	* gtk/gtk.override (_wrap_gtk_item_factory_create_items,