@@ -1,5 +1,7 @@
 2001-12-14  Johan Dahlin  <jdahlin@telia.com>
 
+	* gobjectmodule.c (initgobject): Add gobject.glib_version.
+
 	* configure.in (PYGTK_MINOR_VERSION): Add and define
 	PYGTK_[MAJOR,MINOR,MACRO]_VERSION. Also add *_REQUIRED_VERSION 
 	for dependencies.
